@@ -22,6 +22,7 @@ public:
 
   virtual void Update(InfoBoxData &data) noexcept = 0;
   virtual bool HandleKey(const InfoBoxKeyCodes keycode) noexcept;
+  virtual bool HandleClick() noexcept;
 
   virtual void OnCustomPaint(Canvas &canvas, const PixelRect &rc) noexcept;
 
